docs/original_moodle/entregas/todas/1/Tarea 1 - Ejercicio 8  - Casa de Cambio Tio Rico VPL/ALFEREZ 1151902 FELIPE 2578/2019-08-25-11-52-27.ceg/compilation.txt
CasaDeCambio.java:169: error: duplicate class: CasaDeCambio
public class CasaDeCambio {
       ^
1 error
Not compiled
